# xjj-housekeeper

./: .gitignore  DEVELOPMENT_GUIDELINES.md  DEVELOPMENT_OUTLINE.md  HANDOVER.md  NO_MIGRATION_POLICY.md  README.md  TERMINOLOGY.md  pyproject.toml  setup_hooks.sh
.githooks/: pre-commit
assets/icons/: README.md
debug/: README.md
debug/video_info_collector/: CLI_DEMO.md  README.md  REFACTOR_PLAN.md  debug_db_status.py  debug_duplicates.py  debug_full_merge.py  debug_merge_action.py  debug_replacement.py  feature_scan_merge_move_detection.md
startup/: Build-XJJ-Desktop-App.command  Open-XJJ-Desktop-App.command  README.md  XJJ-Browser.command  XJJ-Desktop.bat  XJJ-Desktop.command
tests/: README.md  conftest.py  test_path_utils.py
tests/tool_filename_formatter/: test_cli_filename_formatter.py  test_comprehensive_rules.py  test_edge_cases.py  test_file_safety.py  test_filename_formatter.py  test_integration_regression.py  test_performance.py  test_rollback_safety.py
tests/tool_video_info_collector/: test_cli.py  test_csv_output.py  test_db_structure.py  test_extract_video_code.py  test_file_scanning.py  test_file_status_system.py  test_filename_generation.py  test_fingerprint_system.py  test_idempotency.py  test_init_db.py  test_integration.py  test_master_list.py  test_merge_history.py  test_merge_integration.py  test_metadata_extraction.py  test_path_traversal.py  test_security.py  test_smart_merge_scenarios.py  test_sqlite_storage.py  (+1 more)
tools/: __init__.py  path_utils.py
ui/: README.md  __init__.py  app.py  maintain_form.py  services.py  validation.py
(+62 files in other folders)
